<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MEMBER</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">NAME :</string>
    <string name="age">AGE :</string>
    <string name="gender">GENDER : </string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="list">LIST</string>
    <string name="reset">RESET</string>
    <string name="member_option">MEMBER SETTING</string>
    <string name="prefSummary">member에서 보여질 정보 세팅</string>
    <string name="selected_sort_option">멤버 정보 선택 옵션들</string>
    <string name="listTitle">MEMBER INFORMATION</string>
    <string name="listSummary">멤버 정보 설정</string>
    <string name="dialogTitle">MEMBER INFORMATION CHOICE</string>
    <string name="sort_option_default">1</string>
    <string-array name="sort_options">
        <item>NAME</item>
        <item>AGE</item>
        <item>GENDER</item>
        <item>IMAGE</item>        
    </string-array>
    <string-array name="sort_option_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>
