<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />
   
    <EditText 
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
 		      
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age" />
   
    <EditText 
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender" />

    <RadioGroup 
        android:id="@+id/group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Man" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Woman" />
    </RadioGroup>
    
    <Button 
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Image"/>

    
    
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/confirm"
	        android:text="@string/cancel" />

	    <Button
	        android:id="@+id/confirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="20dp"
	        android:text="@string/ok" />

	    <Button
	        android:id="@+id/list_show"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/cancel"
	        android:text="@string/list" />
	    
	     <Button
	        android:id="@+id/reset"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_toRightOf="@+id/list_show"
	        android:text="@string/reset" />
	     
	</RelativeLayout>

 </LinearLayout>
